Updated project to core 3.0 and fixed outdated js

--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GenesisVolunteerPortal",
-  "name": "GenesisVolunteerPortal",
+  "short_name": "temp",
+  "name": "temp",
   "icons": [
     {
       "src": "favicon.ico",
