Added database context and minor refactors

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,10 @@
         "Default": "Warning"
       }
     },
-"AllowedHosts": "*"
+"AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Database": "Data Source=tcp:86.8.241.28,24169;Initial Catalog=GenesisTrustDatabase;User ID=BackendUser;"
+  }
+
 }
