--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Data Source=tcp:86.8.241.28,24169;Initial Catalog=GenesisTrustDatabase;User ID=BackendUser;"
   }
 }
