--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -8,14 +8,14 @@
     }
   },
   "profiles": {
-    "IIS Express": {
+    "Windows": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "temp": {
+    "MacOS": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
